# portolan-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  security-audit.yml  sync-spec.yml
context/shared/adr/: 0004-iceberg-as-plugin.md  0038-metadata-yaml-enrichment.md  0043-style-and-thumbnail-architecture.md  0045-styles-as-stac-assets.md  0046-iceberg-as-optional-extra.md  0048-cli-as-spec-source.md  0053-mandatory-human-readable-titles.md
context/shared/documentation/: ci.md
context/shared/known-issues/: stac-v1.1-bands-placement.md
context/shared/plans/: 2026-05-07-styles-as-stac-assets-plan.md  2026-06-09-arcgis-folder-recursion-design.md  2026-06-09-arcgis-folder-recursion-plan.md
docs/: contributing.md
docs/guides/: extract-arcgis.md  extract-wfs.md  iceberg.md  nested-catalogs.md  skills.md
docs/reference/: configuration.md  iceberg-api.md
portolan_cli/: catalog.py  cli.py  config.py  convert.py  dataset.py  errors.py  external.py  humanize.py  metadata_yaml.py  partitioning.py  pmtiles.py  push.py  readme.py  scan_classify.py  stac.py  style.py  thumbnail.py  thumbnail_style.py
portolan_cli/backends/: __init__.py
portolan_cli/backends/iceberg/: __init__.py  backend.py  config.py  export.py  spatial.py  stac_generator.py  versioning.py
portolan_cli/extract/arcgis/: auth.py  discovery.py  orchestrator.py  url_parser.py
portolan_cli/extract/common/: styles.py
portolan_cli/extract/common/converters/: __init__.py  base.py  esri.py  sld.py
portolan_cli/extract/wfs/: orchestrator.py
portolan_cli/metadata/: fix.py  pmtiles.py  scan.py
portolan_cli/skills/: sourcecoop.md
portolan_cli/validation/: runner.py  stac_rules.py
spec/: DECISIONS.md  README.md  best-practices.md  core.md  extensions.md  structure.md  versions.md
spec/examples/: README.md
spec/formats/: pointcloud.md  raster.md  vector.md
spec/schema/: README.md  catalog-versions.schema.json  catalog.schema.json  collection.schema.json  rules.yaml  versions.schema.json
tests/: conftest.py
tests/benchmark/: test_scan_performance.py  test_validation_benchmark.py
tests/fixtures/metadata/style/valid/: style_categorical.json  style_graduated.json  style_line.json  style_point.json  style_polygon.json
tests/fixtures/styles/: esri_classbreaks.json  esri_uniquevalue.json  sld_categorical.xml  sld_simple_point.xml
tests/iceberg/: conftest.py
tests/iceberg/e2e/: conftest.py  docker-compose.yml  test_concurrent_access.py  test_rest_catalog_workflow.py  test_s3_storage.py
tests/iceberg/integration/: conftest.py  test_cli_add_iceberg.py  test_cli_version_commands.py  test_error_handling.py  test_export_after_add.py  test_spatial_cli_integration.py
tests/iceberg/unit/: test_backend.py  test_config.py  test_entry_point.py  test_export.py  test_iceberg_native.py  test_import.py  test_on_post_add.py  test_pull.py  test_push_support.py  test_spatial.py  test_spatial_integration.py  test_stac_generator.py  test_versioning.py
tests/integration/: test_add_with_defaults.py  test_check_command.py  test_cli_json.py  test_mandatory_titles_add.py  test_metadata_scan_unification.py  test_raster_bands_placement.py  test_readme_recursive.py  test_stac_extensions_integration.py  test_thumbnail_workflow.py
tests/spec_compliance/: conftest.py
tests/unit/: test_add_continue_on_errors.py  test_add_external.py  test_add_force_flag.py  test_cli_add_rm.py  test_cli_extract_arcgis.py  test_cli_init.py  test_cli_metadata_readme.py  test_csv_skip.py  test_errors.py  test_humanize.py  test_mandatory_titles.py  test_partitioning.py  test_readme_catalog_aggregation.py  test_scan_classify.py  test_stac_extensions.py  test_stac_metadata_update.py  test_style.py  test_thumbnail.py  test_thumbnail_style.py  test_validation_runner.py
tests/unit/backends/: test_backends.py
tests/unit/extract/arcgis/: test_auth.py  test_discovery.py  test_orchestrator.py  test_url_parser.py
tests/unit/extract/common/: test_styles.py
tests/unit/extract/common/converters/: __init__.py  test_base.py  test_esri.py  test_sld.py
tests/unit/models/: test_item.py
