[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portolan-cli"
version = "0.7.0"
description = "A CLI tool for managing cloud-native geospatial data"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Nissim Lebovits", email = "nlebovits@pm.me" },
]
keywords = ["cloud-native", "geospatial", "gis", "io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "antimeridian>=0.3.11",  # RFC 7946 compliant antimeridian handling for STAC bbox
    "click>=8.3.1",
    "defusedxml>=0.7.1",  # Safe XML parsing (XXE protection) for CSW/ISO 19139 metadata
    "geoparquet-io>=1.1.1",  # v1.1.1 fixes bbox coordinate mixing in projected CRS (issue #377)
    "httpx>=0.27.0",  # HTTP client for ArcGIS REST API discovery
    "obstore>=0.8.2",  # Cloud object storage (S3, GCS, Azure) via Rust bindings
    "python-dotenv>=1.0.0",  # Load .env files for credentials (ADR-0024, Issue #356)
    "numpy>=1.24.0",  # Array ops (transitive via rasterio, but we import directly for thumbnails)
    "pyarrow>=12.0.0,<25.0.0",  # v22+ has ABI incompatibility with abseil on some systems
    "pyproj>=3.0.0",  # CRS transformations (transitive via rasterio, but we import directly)
    "pystac>=1.10.0",  # STAC catalog/collection/item creation
    "stac-geoparquet>=0.6.0",  # Generate items.parquet for efficient STAC queries (optional)
    "pyyaml>=6.0",  # YAML config file support
    "rasterio>=1.3.0",  # Raster I/O (transitive via rio-cogeo, but we import directly)
    "cryptography>=46.0.7",  # CVE-2026-39892 fix (transitive via httpx/certifi, pinned for security)
    "lxml>=6.1.0",  # CVE-2026-41066 fix (transitive via owslib, pinned for security)
    "pillow>=12.2.0",  # CVE-2026-40192 fix (transitive via rasterio, pinned for security)
    "pmtiles>=3.0.0",  # PMTiles metadata reading (header, bounds, zoom levels)
    "pyogrio>=0.7.0",  # FlatGeobuf metadata reading (transitive via geoparquet-io, but we import directly)
    "pygments>=2.20.0",  # CVE-2026-4539 fix (transitive via rich, pinned for security)
    "requests>=2.33.0",  # CVE-2026-25645 fix (transitive, pinned for security)
    "rich>=13.0.0",  # Terminal progress bars (transitive via geoparquet-io, but we import directly)
    "rio-cogeo>=5.0.0",  # COG creation/validation (includes rasterio)
    "typing_extensions>=4.0.0; python_version < '3.11'",
]

[project.scripts]
portolan = "portolan_cli:cli"

[project.urls]
"Homepage" = "https://github.com/portolan-sdi/portolan-cli"
"Bug Tracker" = "https://github.com/portolan-sdi/portolan-cli/issues"
"Documentation" = "https://github.com/portolan-sdi/portolan-cli#readme"
"Source" = "https://github.com/portolan-sdi/portolan-cli"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.3",
    "codespell>=2.4.1",
    "menard @ git+https://github.com/nlebovits/menard.git@main",  # git: brevity extra not on PyPI yet
    "deptry>=0.25.1",  # Dependency checker (unused, missing, transitive deps)
    "gitingest>=0.1.0",  # Auto-fetch API docs for core dependencies
    "import-linter>=2.0",  # Architecture enforcement via import contracts
    "commitizen>=4.13.4",
    "hypothesis>=6.151.5",
    "mutmut>=3.4.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.1",
    "radon>=6.0.1",
    "ruff>=0.14.11",
    "types-defusedxml>=0.7.0",  # Type stubs for defusedxml
    "types-PyYAML>=6.0",  # Type stubs for PyYAML
    "vulture>=2.14",
    "xenon>=0.9.3",
]
pmtiles = [
    "gpio-pmtiles>=0.1.0",  # PMTiles generation from GeoParquet (requires tippecanoe)
]
thumbnails = [
    "contextily>=1.5.0",  # Basemap tiles for vector thumbnails
    "geopandas>=0.14.0",  # GeoParquet reading for thumbnail generation
    "mapbox-vector-tile>=2.0.0",  # MVT decoding for PMTiles thumbnail generation
    "matplotlib>=3.8.0",  # Rendering geometries to JPEG
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.8.0",  # Auto-generate CLI reference from Click commands
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.21.2",  # Fix filename=None bug in highlight extension
]

[tool.hatch.metadata]
allow-direct-references = true  # Allow git dependencies (menard during development)

[tool.hatch.build.targets.wheel]
packages = ["portolan_cli"]

# ---------- commitizen ----------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true

# ---------- testing ----------

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=portolan_cli --cov-report=term-missing --cov-fail-under=0"
markers = [
    "unit: Fast, isolated, no I/O (< 100ms each)",
    "integration: Multi-component, may touch filesystem",
    "network: Requires network access (mocked locally, real in CI nightly)",
    "realdata: Uses real-world fixtures from tests/fixtures/realdata/ (tests orchestration, not geometry)",
    "snapshot: Compares output against golden files",
    "benchmark: Performance measurement, tracked over time",
    "slow: Takes > 5 seconds",
]

[tool.coverage.run]
source = ["portolan_cli"]
branch = true
omit = [
    "portolan_cli/__init__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------- linting & formatting ----------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["portolan_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------- type checking ----------

[tool.mypy]
python_version = "3.10"
strict = true  # Enables all strict flags at once

[[tool.mypy.overrides]]
module = ["pyarrow.*", "rasterio.*", "gitingest.*", "matplotlib.*"]
ignore_missing_imports = true

# ---------- security ----------

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []  # Add specific checks to skip if needed, e.g., ["B101"]

# ---------- spell check ----------

[tool.codespell]
# "Nd" is a Unicode category code for "Number, decimal digit" used in Hypothesis tests
# French words from Belgian ISO 19139 test fixture (tests/fixtures/csw/belgium_buildings_iso19139.xml)
# "BU" is the INSPIRE theme code for Buildings (used in test fixtures)
ignore-words-list = "nd,bu,ue,adresse,projet,environnement,copie,explicite,connexion,objets,visibles,issus,fonction,mesures,informations"

# ---------- dead code ----------

[tool.vulture]
min_confidence = 80
paths = ["portolan_cli", "tests", "vulture_whitelist.py"]
exclude = [
    "portolan_cli/validation/rules.py",  # Abstract methods have unused params
    "portolan_cli/backends/protocol.py",  # Protocol method params are intentionally unused
    "portolan_cli/backends/json_file.py",  # Stub methods raise NotImplementedError
]
sort_by_size = true
verbose = false

# ---------- mutation testing ----------

[tool.mutmut]
paths_to_mutate = ["portolan_cli/"]
pytest_add_cli_args_test_selection = ["tests/"]

# ---------- architecture enforcement ----------
# See ADR-0025 for rationale. These contracts enforce critical architectural boundaries.
# Stricter layered contracts are aspirational - the current architecture has some coupling
# that would need refactoring to support full layered enforcement.

[tool.importlinter]
root_packages = ["portolan_cli"]
include_external_packages = false

[[tool.importlinter.contracts]]
id = "cli-no-storage"
name = "CLI cannot import storage backends directly"
type = "forbidden"
source_modules = ["portolan_cli.cli"]
forbidden_modules = ["portolan_cli.backends"]
# Allow intermediate modules to access backends (ADR-0007: CLI wraps API).
# cli.py uses these modules as a clean interface; direct cli->backends is still forbidden.
ignore_imports = [
    "portolan_cli.catalog -> portolan_cli.backends",
    "portolan_cli.dataset -> portolan_cli.backends",
    "portolan_cli.version_ops -> portolan_cli.backends",
    "portolan_cli.version_ops -> portolan_cli.backends.protocol",
    "portolan_cli.cli -> portolan_cli.backends.protocol",  # TYPE_CHECKING only
]

[[tool.importlinter.contracts]]
id = "utilities-are-foundational"
name = "Utilities must not import other portolan modules"
type = "independence"
modules = [
    "portolan_cli.output",
    "portolan_cli.errors",
    "portolan_cli.constants",
    "portolan_cli.json_output",
]

# ---------- dependency checking ----------
# deptry detects unused, missing, and transitive dependencies
# Rules: DEP001 (missing), DEP002 (unused), DEP003 (transitive), DEP004 (imported as dev)

[tool.deptry]
# Treat optional-dependencies groups as dev dependencies
optional_dependencies_dev_groups = ["dev", "docs"]
# Extend default exclusions (venv, .venv, tests, .git already excluded)
extend_exclude = [
    "scripts",  # Standalone scripts may use external tools
    "context",  # Documentation context, not runtime code
    ".claude",  # Claude Code worktrees and temp files
]

[tool.deptry.per_rule_ignores]
# Security constraints for transitive dependencies (not directly imported)
# - cryptography: CVE-2026-39892
# - lxml: CVE-2026-41066
# - pillow: CVE-2026-40192
# - pygments: CVE-2026-4539
# - requests: CVE-2026-25645
DEP002 = ["cryptography", "lxml", "pillow", "pygments", "requests"]

[dependency-groups]
dev = [
    "fastembed>=0.8.0",
    "menard[brevity] @ git+https://github.com/nlebovits/menard.git@main",
    "moto[s3,server]>=5.0.0",
    "numpy>=2.2.6",
    "pylint>=4.0.5",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.menard]
mode = "block"
transitive_depth = 1
enforce_symmetry = true
require_links = ["portolan_cli/**/*.py"]
exempt = ["tests/**"]
# Only track USER-FACING docs (not ADRs, plans, or internal context)
# ADRs are historical records - they don't need updating when code changes
doc_paths = ["docs/**/*.md", "README.md"]
